fixed the block of whites on the right side on smaller screens

--- a/style.css
+++ b/style.css
@@ -60,23 +60,23 @@
   margin-right: 40px;
 }
 
-
-.top-bar{
-  background-color: rgb(190,210,237);
+.top-bar {
+  background-color: rgb(190, 210, 237);
   position: fixed; /* Added */
   top: 0; /* Added */
   left: 0; /* Added */
   width: 100%; /* Added */
   z-index: 100; /* Added */
 }
+.top-bar ul,
 .top-bar li {
-  background-color: rgb(190,210,237);
+  background-color: rgb(190, 210, 237);
 }
 body {
   padding-top: 50px;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .content-wrapper {
     flex-direction: column;
     padding: 0; /* Removes padding for smaller screens */
